--- a/app/src/main/res/layout/fragment_advertise.xml
+++ b/app/src/main/res/layout/fragment_advertise.xml
@@ -19,19 +19,53 @@
         android:layout_centerInParent="true"
         android:contentDescription="@string/icon_image"
         android:scaleType="fitCenter"
-        android:src="@drawable/fobimg"
-        android:visibility="invisible" />
+        android:src="@drawable/fobimg" />
 
-    <Button
-        android:id="@+id/advertisingButton"
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/fobImg"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:background="#000000"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:text="@string/start_pairing"
-        android:textAlignment="center" />
+        android:orientation="vertical"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="50dp">
+
+        <Button
+            android:id="@+id/pairing"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:background="#000000"
+            android:text="@string/start_pairing"
+            android:textAlignment="center"
+            android:visibility="visible"/>
+
+        <Button
+            android:id="@+id/unlock"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:background="#000000"
+            android:layout_marginTop="10dp"
+            android:text="@string/unlock_door"
+            android:textAlignment="center"
+            android:visibility="visible"/>
+
+        <Button
+            android:id="@+id/deletePairing"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:background="#000000"
+            android:layout_marginTop="10dp"
+            android:text="@string/remove_pairing"
+            android:textAlignment="center"
+            android:visibility="visible"/>
+    </LinearLayout>
+
+
 </RelativeLayout>
